<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:padding="16dp">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:paddingBottom="8dp"/>

    <!-- Column headers -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@drawable/item_row_transparent" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/decrement"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qty"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/increment"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/item_row_transparent"
        android:layout_weight="1"/>

    <!-- Nav Buttons -->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <!-- Add Item Button -->
        <Button
            android:id="@+id/addItemButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="320dp"
            android:text="@string/add_item"
            android:backgroundTint="#5F5F5F"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:padding="14dp"
            android:layout_marginEnd="8dp" />

        <!-- Logout Button -->
        <Button
            android:id="@+id/logoutButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="320dp"
            android:text="@string/logout_btn"
            android:backgroundTint="#5F5F5F"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:padding="14dp"
            android:layout_marginStart="8dp" />

    </LinearLayout>

</LinearLayout>
